[package]
name = "moose-cli"
version = "0.0.1"
edition = "2021"
description = "Build tool for moose apps"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.3.17", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
console = "0.15.7"
thiserror = "1.0.59"
hyper = { version = "1", features = ["full"] }
hyper-tls = "0.6.0"
notify = { version = "6.1.1", default-features = false, features = [
    "macos_kqueue",
] }
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13.1", features = ["toml"] }
home = "0.5.5"
sentry = "0.31.7"
clickhouse = { version = "0.11.5", features = ["uuid"] }
schema-ast = { git = "https://github.com/prisma/prisma-engines.git" }
diagnostics = { git = "https://github.com/prisma/prisma-engines.git" }
# datamodel-renderer = { git = "https://github.com/prisma/prisma-engines.git"}
handlebars = "5.1"
# TODO Remove the following
tinytemplate = "1.1"
rdkafka = { version = "0.36", features = ["ssl"] }
convert_case = "0.6.0"
log = "0.4"
fern = "0.6"
humantime = "2.1.0"
uuid = { version = "1.6", features = ["v4"] }
crypto-hash = "0.3.4"
serde_json = "1.0.108"
serde_urlencoded = "0.7"
base64 = "0.22.0"
async-recursion = "1.1.0"
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1"
lazy_static = "1.4.0"
anyhow = "1.0"
spinners = "4.1.1"
git2 = { version = "0.18.1", features = ["vendored-libgit2"] }
regex = "1.10.3"
reqwest = { version = "0.12", features = ["stream", "json"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
futures = "0.3"
toml_edit = "0.22.9"
flate2 = "1.0"
tar = "0.4"
swc_ecma_parser = "0.143.6"
swc_common = { version = "0.33.18", features = ["tty-emitter"] }
swc = "0.273.15"
swc_ecma_ast = "0.112.5"

[dev-dependencies]
clickhouse = { version = "0.11.5", features = ["uuid", "test-util"] }
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
