[package]
name = "moose-cli"
version = "0.0.1"
edition = "2021"
description = "Build tool for moose apps"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.3.17", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
console = "0.15.7"
thiserror = "1.0.59"
hyper = { version = "1", features = ["full"] }
hyper-tls = "0.6.0"
notify = { version = "6.1.1", default-features = false, features = [
    "macos_kqueue",
] }
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13.1", features = ["toml"] }
home = "0.5.5"
clickhouse = { version = "0.11.5", features = ["uuid"] }
clickhouse-rs = { version = "1.1.0-alpha.1", features = ["tls"] }
handlebars = "5.1"
rdkafka = { version = "0.36", features = ["ssl"] }
convert_case = "0.6.0"
log = "0.4"
fern = { version = "0.7", features = ["date-based"] }
humantime = "2.1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
crypto-hash = "0.3.4"
serde_json = { version = "1.0.133", features = ["preserve_order"] }
serde_urlencoded = "0.7"
base64 = "0.22.0"
async-recursion = "1.1.0"
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1"
lazy_static = "1.4.0"
anyhow = "1.0"
spinners = "4.1.1"
git2 = { version = "0.18.1", features = ["vendored-libgit2"] }
regex = "1.10.3"
reqwest = { version = "0.12", features = ["stream", "json"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
futures = "0.3"
toml_edit = "0.22.9"
flate2 = "1.0"
tar = "0.4"
pathdiff = "0.2.1"
rustpython-parser = "0.3.1"
walkdir = "2"
comfy-table = "7.1.1"
ratatui = "0.27.0"
prometheus-parse = "0.2.5"
crossterm = { version = "0.27.0", features = ["event-stream"] }
csv = "1.3.0"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10.8"
hex = "0.4.2"
constant_time_eq = "0.3.0"
tokio-cron-scheduler = "0.11.0"
cron = "0.13.0"
tokio-stream = "0.1.16"
indexmap = "2.5.0"
redis = { version = "0.24.0", features = [
    "tokio-comp",
    "aio",
    "tokio-native-tls-comp",
] }
jsonwebtoken = "9.3.0"
num-traits = "0.2.19"
async-trait = "0.1.83"
protobuf = "3.7.1"
ctor = "0.2.8"
serial_test = "3.1.1"

# Monitoring
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
opentelemetry_sdk = { version = "0.27.0", features = [
    "logs",
    "metrics",
    "trace",
    "rt-tokio",
] }
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry = "0.27.0"
opentelemetry-appender-log = "0.27.0"
opentelemetry-otlp = { version = "0.27.0", default-features = false, features = [
    "logs",
    "metrics",
    "trace",
    "http-json",
    "tokio",
] }
opentelemetry-http = { version = "0.27.0", features = ["reqwest"] }
prometheus-client = "0.22.2"
serde_yaml = "0.9.34"
temporal-sdk-core = "0.1.0-alpha.1"
prost-types = "0.7.0"
tonic = { version = "0.4.3", features = ["transport", "prost", "codegen"] }
url = "2.5.4"
tempfile = "3.15.0"
http = "1.2.0"

[dev-dependencies]
clickhouse = { version = "0.11.5", features = ["uuid", "test-util"] }
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serial_test = "3.1.1"

[build-dependencies]
protobuf-codegen = "3.7.1"

[features]
used_linker = []