[build-system]
requires = ["maturin==1.8.1"]
build-backend = "maturin"

[project]
name = "moose-cli"
description_content_type = "text/markdown"
requires-python = ">=3.12"

[project.urls]
homepage = "https://www.fiveonefour.com"
documentation = "https://docs.fiveonefour.com/moose"
repository = "https://github.com/514labs/moose"

[tool.maturin]
bindings = "bin"
strip = true

[tool.maturin.target.x86_64-apple-darwin]
# macOS deployment target SDK version
macos-deployment-target = "13.0"

[tool.maturin.target.aarch64-apple-darwin]
# macOS deployment target SDK version
macos-deployment-target = "14.0"

