[package]
name = "igloo-cli"
version = "0.0.0"
edition = "2021"
description = "Build tool for igloo apps"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.3.17", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
console = "0.15.7"
dialoguer = "0.10.4"
hyper = { version = "0.14", features = ["full"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
reqwest = "0.11.18"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13.1", features = ["toml"] }
home = "0.5.5"
sentry = "0.31.7"
clickhouse = "0.11.5"
schema-ast = { git = "https://github.com/prisma/prisma-engines.git"}
diagnostics = { git = "https://github.com/prisma/prisma-engines.git"}
tinytemplate = "1.1"
rdkafka = { version = "0.34", features = ["cmake-build"] }
bimap = "0.6.3"
convert_case = "0.6.0"
log = "0.4"
fern = "0.6"
humantime = "2.1.0"
uuid = {version = "1.6", features = ["v4"]}


[dev-dependencies]
clickhouse = { version = "0.11.5", features = ["test-util"] }
assert_cmd = "2.0.12"
predicates = "3.0.4"
