[package]
name = "igloo-cli"
version = "0.0.0"
edition = "2021"
description = "Build tool for igloo apps"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.3.17", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
console = "0.15.7"
dialoguer = "0.10.4"
hyper = { version = "1", features = ["full"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13.1", features = ["toml"] }
home = "0.5.5"
sentry = "0.31.7"
clickhouse = { version = "0.11.5", features = ["uuid"] }
schema-ast = { git = "https://github.com/prisma/prisma-engines.git"}
diagnostics = { git = "https://github.com/prisma/prisma-engines.git"}
tinytemplate = "1.1"
rdkafka = { version = "0.34" }
bimap = "0.6.3"
convert_case = "0.6.0"
log = "0.4"
fern = "0.6" 
humantime = "2.1.0"
uuid = {version = "1.6", features = ["v4"]}
serde_json = "1.0.108"
async-recursion = "1.0.5"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
lazy_static = "1.4.0"
anyhow = "1.0"
spinners = "4.1.1"
git2 = "0.18.1"

[dev-dependencies]
clickhouse = { version = "0.11.5", features = ["uuid", "test-util"] }
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
